--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mt-loading",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lib": "cross-env LIB=lib webpack"
   },
